# mcp-northwind-db

./: .gitignore  README.md  pyproject.toml
src/mcpserver/: __main__.py  server.py
